# SOTIF_Uncertainty_Evaluation_Lidar_Object_Detection

./: .gitignore  CITATION.cff  FINAL_RESEARCH_OUTPUT.md  LICENSE  README.md  compute_operating_points.py  generate_paper_figures.py  pyproject.toml  requirements.txt  setup.py  verify_paper_values.py
Analysis/: evaluation_results.pkl
configs/: second_sotif_ensemble.yaml
docs/: extending.md
notebooks/: SOTIF_Uncertainty_Evaluation_Demo.ipynb
paper/: SOTIF_Uncertainty_Conference_Paper.md  SOTIF_Uncertainty_Conference_Paper.tex
reports/evaluation_report/: SOTIF_Evaluation_Report.md
results/: comparison_summary.json  evaluation_report.md  evaluation_results.json  results_summary.json
results/ablations/: ablation_results.json
scripts/: evaluate.py  execute_evaluation.py  generate_carla_data.py  prepare_kitti.py  run_ablations.py  run_inference.py  run_pipeline.py  train_ensemble.sh
sotif_uncertainty/: __init__.py  carla_case_study.py  dataset_adapter.py  demo_data.py  dst_uncertainty.py  ensemble.py  kitti_utils.py  matching.py  mc_dropout.py  metrics.py  sotif_analysis.py  uncertainty.py  visualization.py  weather_augmentation.py
tests/: test_pipeline.py
