[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sotif_uncertainty"
version = "1.0.0"
description = "Uncertainty evaluation methodology for SOTIF analysis of ML-based LiDAR object detection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Milin Patel", email = "milin.patel@hs-kempten.de"},
    {name = "Rolf Jung", email = "rolf.jung@hs-kempten.de"},
]
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.4",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/milinpatel07/SOTIF_Uncertainty_Evaluation_Lidar_Object_Detection"
